promptdslcore/.antlr/PromptDSLParser.java
// Generated from d:/work/promptDSL/promptdslcore/PromptDSLParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PromptDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROMPT=1, PARAMS=2, SYSTEM=3, USER=4, NOTE=5, INPUT=6, OUTPUT=7, FORMAT=8, 
		TYPE=9, STRUCT=10, BEFORE=11, SCHEMA=12, PARSE=13, JSONFIX=14, MARKDOWN=15, 
		IF=16, ELSE=17, OUTPUTSPEC=18, LBRACE=19, RBRACE=20, LPAREN=21, RPAREN=22, 
		COLON=23, EQUALS=24, NOTEQUALS=25, AT=26, DOT=27, LBRACK=28, RBRACK=29, 
		COMMA=30, MINUS=31, BOOLEAN=32, ARRAY_STRING=33, ARRAY_INTEGER=34, ARRAY_FLOAT=35, 
		ARRAY_BOOLEAN=36, MD=37, JSON=38, ID=39, STRING=40, NUMBER=41, BOOL=42, 
		PIPE=43, SEMI=44, HINT=45, FIX=46, AFTER=47, WS=48, LINE_COMMENT=49, BLOCK_COMMENT=50, 
		CODE_STRING=51, CODE_TEXT=52, STRING_TYPE=53, FLOAT_TYPE=54, INT_TYPE=55;
	public static final int
		RULE_promptFile = 0, RULE_promptDef = 1, RULE_promptBlock = 2, RULE_sysSection = 3, 
		RULE_moduleDef = 4, RULE_moduleContent = 5, RULE_inputSection = 6, RULE_outputSection = 7, 
		RULE_outputStruct = 8, RULE_outputMarkdown = 9, RULE_systemSection = 10, 
		RULE_userSection = 11, RULE_userContent = 12, RULE_ifStatement = 13, RULE_condition = 14, 
		RULE_noteSection = 15, RULE_fixSection = 16, RULE_afterSection = 17, RULE_codeBlockContent = 18, 
		RULE_expr = 19, RULE_dslCallExpr = 20, RULE_fieldDef = 21, RULE_textLine = 22, 
		RULE_paramPath = 23, RULE_structDef = 24, RULE_annotation = 25, RULE_annotationArgs = 26, 
		RULE_annotationValue = 27, RULE_arrayLiteral = 28, RULE_textBlock = 29, 
		RULE_type = 30, RULE_value = 31, RULE_formatType = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"promptFile", "promptDef", "promptBlock", "sysSection", "moduleDef", 
			"moduleContent", "inputSection", "outputSection", "outputStruct", "outputMarkdown", 
			"systemSection", "userSection", "userContent", "ifStatement", "condition", 
			"noteSection", "fixSection", "afterSection", "codeBlockContent", "expr", 
			"dslCallExpr", "fieldDef", "textLine", "paramPath", "structDef", "annotation", 
			"annotationArgs", "annotationValue", "arrayLiteral", "textBlock", "type", 
			"value", "formatType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'prompt'", "'params'", "'system'", "'user'", "'note'", "'input'", 
			"'output'", "'format'", "'type'", "'struct'", "'before'", "'schema'", 
			"'parse'", "'jsonfix'", "'markdown'", "'if'", "'else'", "'outputspec'", 
			"'{'", null, "'('", "')'", "':'", "'=='", "'!='", "'@'", "'.'", "'['", 
			"']'", "','", "'-'", "'bool'", "'[]string'", "'[]int'", "'[]float'", 
			"'[]bool'", "'md'", "'json'", null, null, null, null, "'|'", "';'", "'hint'", 
			null, null, null, null, null, null, null, "'string'", "'float'", "'int'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROMPT", "PARAMS", "SYSTEM", "USER", "NOTE", "INPUT", "OUTPUT", 
			"FORMAT", "TYPE", "STRUCT", "BEFORE", "SCHEMA", "PARSE", "JSONFIX", "MARKDOWN", 
			"IF", "ELSE", "OUTPUTSPEC", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", 
			"EQUALS", "NOTEQUALS", "AT", "DOT", "LBRACK", "RBRACK", "COMMA", "MINUS", 
			"BOOLEAN", "ARRAY_STRING", "ARRAY_INTEGER", "ARRAY_FLOAT", "ARRAY_BOOLEAN", 
			"MD", "JSON", "ID", "STRING", "NUMBER", "BOOL", "PIPE", "SEMI", "HINT", 
			"FIX", "AFTER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "CODE_STRING", 
			"CODE_TEXT", "STRING_TYPE", "FLOAT_TYPE", "INT_TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PromptDSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PromptDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PromptDSLParser.EOF, 0); }
		public List<PromptDefContext> promptDef() {
			return getRuleContexts(PromptDefContext.class);
		}
		public PromptDefContext promptDef(int i) {
			return getRuleContext(PromptDefContext.class,i);
		}
		public PromptFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptFile; }
	}

	public final PromptFileContext promptFile() throws RecognitionException {
		PromptFileContext _localctx = new PromptFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_promptFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				promptDef();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROMPT );
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptDefContext extends ParserRuleContext {
		public TerminalNode PROMPT() { return getToken(PromptDSLParser.PROMPT, 0); }
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<PromptBlockContext> promptBlock() {
			return getRuleContexts(PromptBlockContext.class);
		}
		public PromptBlockContext promptBlock(int i) {
			return getRuleContext(PromptBlockContext.class,i);
		}
		public PromptDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptDef; }
	}

	public final PromptDefContext promptDef() throws RecognitionException {
		PromptDefContext _localctx = new PromptDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_promptDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(PROMPT);
			setState(74);
			match(ID);
			setState(75);
			match(LBRACE);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				promptBlock();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 211655988347128L) != 0) );
			setState(81);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptBlockContext extends ParserRuleContext {
		public InputSectionContext inputSection() {
			return getRuleContext(InputSectionContext.class,0);
		}
		public OutputSectionContext outputSection() {
			return getRuleContext(OutputSectionContext.class,0);
		}
		public SysSectionContext sysSection() {
			return getRuleContext(SysSectionContext.class,0);
		}
		public SystemSectionContext systemSection() {
			return getRuleContext(SystemSectionContext.class,0);
		}
		public UserSectionContext userSection() {
			return getRuleContext(UserSectionContext.class,0);
		}
		public NoteSectionContext noteSection() {
			return getRuleContext(NoteSectionContext.class,0);
		}
		public AfterSectionContext afterSection() {
			return getRuleContext(AfterSectionContext.class,0);
		}
		public FixSectionContext fixSection() {
			return getRuleContext(FixSectionContext.class,0);
		}
		public ModuleDefContext moduleDef() {
			return getRuleContext(ModuleDefContext.class,0);
		}
		public PromptBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptBlock; }
	}

	public final PromptBlockContext promptBlock() throws RecognitionException {
		PromptBlockContext _localctx = new PromptBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_promptBlock);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				inputSection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				outputSection();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				sysSection();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				systemSection();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				userSection();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				noteSection();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				afterSection();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90);
				fixSection();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(91);
				moduleDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SysSectionContext extends ParserRuleContext {
		public TerminalNode SYSTEM() { return getToken(PromptDSLParser.SYSTEM, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<TerminalNode> ID() { return getTokens(PromptDSLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PromptDSLParser.ID, i);
		}
		public SysSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sysSection; }
	}

	public final SysSectionContext sysSection() throws RecognitionException {
		SysSectionContext _localctx = new SysSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sysSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(SYSTEM);
			setState(95);
			match(LBRACE);
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96);
				match(ID);
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(101);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<ModuleContentContext> moduleContent() {
			return getRuleContexts(ModuleContentContext.class);
		}
		public ModuleContentContext moduleContent(int i) {
			return getRuleContext(ModuleContentContext.class,i);
		}
		public ModuleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDef; }
	}

	public final ModuleDefContext moduleDef() throws RecognitionException {
		ModuleDefContext _localctx = new ModuleDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moduleDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ID);
			setState(104);
			match(LBRACE);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 705336709220544L) != 0)) {
				{
				{
				setState(105);
				moduleContent();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContentContext extends ParserRuleContext {
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public ParamPathContext paramPath() {
			return getRuleContext(ParamPathContext.class,0);
		}
		public ModuleContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleContent; }
	}

	public final ModuleContentContext moduleContent() throws RecognitionException {
		ModuleContentContext _localctx = new ModuleContentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moduleContent);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				textLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				paramPath();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputSectionContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(PromptDSLParser.INPUT, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public InputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputSection; }
	}

	public final InputSectionContext inputSection() throws RecognitionException {
		InputSectionContext _localctx = new InputSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(INPUT);
			setState(118);
			match(LBRACE);
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(119);
				fieldDef();
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(124);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputSectionContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(PromptDSLParser.OUTPUT, 0); }
		public OutputStructContext outputStruct() {
			return getRuleContext(OutputStructContext.class,0);
		}
		public OutputMarkdownContext outputMarkdown() {
			return getRuleContext(OutputMarkdownContext.class,0);
		}
		public OutputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputSection; }
	}

	public final OutputSectionContext outputSection() throws RecognitionException {
		OutputSectionContext _localctx = new OutputSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_outputSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(OUTPUT);
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(127);
				outputStruct();
				}
				break;
			case COLON:
				{
				setState(128);
				outputMarkdown();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputStructContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public OutputStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputStruct; }
	}

	public final OutputStructContext outputStruct() throws RecognitionException {
		OutputStructContext _localctx = new OutputStructContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_outputStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(LBRACE);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				fieldDef();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(137);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputMarkdownContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(PromptDSLParser.COLON, 0); }
		public TerminalNode MARKDOWN() { return getToken(PromptDSLParser.MARKDOWN, 0); }
		public OutputMarkdownContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputMarkdown; }
	}

	public final OutputMarkdownContext outputMarkdown() throws RecognitionException {
		OutputMarkdownContext _localctx = new OutputMarkdownContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_outputMarkdown);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(COLON);
			setState(140);
			match(MARKDOWN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemSectionContext extends ParserRuleContext {
		public TerminalNode SYSTEM() { return getToken(PromptDSLParser.SYSTEM, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<TextLineContext> textLine() {
			return getRuleContexts(TextLineContext.class);
		}
		public TextLineContext textLine(int i) {
			return getRuleContext(TextLineContext.class,i);
		}
		public SystemSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemSection; }
	}

	public final SystemSectionContext systemSection() throws RecognitionException {
		SystemSectionContext _localctx = new SystemSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_systemSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(SYSTEM);
			setState(143);
			match(LBRACE);
			setState(145); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(144);
				textLine();
				}
				}
				setState(147); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 705336709220544L) != 0) );
			setState(149);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserSectionContext extends ParserRuleContext {
		public TerminalNode USER() { return getToken(PromptDSLParser.USER, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<UserContentContext> userContent() {
			return getRuleContexts(UserContentContext.class);
		}
		public UserContentContext userContent(int i) {
			return getRuleContext(UserContentContext.class,i);
		}
		public UserSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userSection; }
	}

	public final UserSectionContext userSection() throws RecognitionException {
		UserSectionContext _localctx = new UserSectionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_userSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(USER);
			setState(152);
			match(LBRACE);
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				userContent();
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 711933779314880L) != 0) );
			setState(158);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserContentContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public TerminalNode OUTPUTSPEC() { return getToken(PromptDSLParser.OUTPUTSPEC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UserContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userContent; }
	}

	public final UserContentContext userContent() throws RecognitionException {
		UserContentContext _localctx = new UserContentContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_userContent);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				textLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				match(OUTPUTSPEC);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(163);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PromptDSLParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(PromptDSLParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PromptDSLParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(PromptDSLParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(PromptDSLParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(PromptDSLParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(PromptDSLParser.RBRACE, i);
		}
		public List<UserContentContext> userContent() {
			return getRuleContexts(UserContentContext.class);
		}
		public UserContentContext userContent(int i) {
			return getRuleContext(UserContentContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PromptDSLParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(IF);
			setState(167);
			match(LPAREN);
			setState(168);
			condition();
			setState(169);
			match(RPAREN);
			setState(170);
			match(LBRACE);
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 711933779314880L) != 0)) {
				{
				{
				setState(171);
				userContent();
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(177);
			match(RBRACE);
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(178);
				match(ELSE);
				setState(179);
				match(LBRACE);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 711933779314880L) != 0)) {
					{
					{
					setState(180);
					userContent();
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				match(RBRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
